fixed css overlap for md size

--- a/src/scss/components/projects.scss
+++ b/src/scss/components/projects.scss
@@ -35,11 +35,11 @@
           text-decoration: none;     
           img {
             display: inherit;
+                                  
           }                
           .projects-div-info {    
             text-align: left;                                
             width: 100%;
-            max-height: 33rem;                             
             &--website {
               color: white;
             }
@@ -149,7 +149,10 @@
         .projects {
           justify-content: center;
           &-div {
-            margin-right: 0 !important;            
+            margin-right: 0 !important;   
+            img {
+              max-height: 23rem;
+            }         
           }
         }
       }
@@ -176,10 +179,12 @@
         }
         .projects {   
           justify-content: center;   
+          min-height: 100vh;
           &-div {
             margin-right: 0 !important;
             img {
               margin-bottom: 1rem;
+              max-height: 33rem;       
             }
             &-info {
               &-text{
@@ -201,10 +206,9 @@
   .projects-page {    
     .projects-page-form {
       .projects-container {        
-        .projects {          
+        .projects {                    
           &-div {            
-            border-radius: 20px;
-            // border: 2px solid white;
+            border-radius: 20px;            
             margin-bottom: 2rem;    
             img {
               border: 2px solid white;
@@ -233,6 +237,7 @@
           display: flex;
           flex-wrap: wrap;
           justify-content: space-between;
+          min-height: 100vh;
           z-index:10;
           .projects-div {            
             flex-wrap: wrap;
